[gd_scene load_steps=4 format=3 uid="uid://dsv72jbnb84xt"]

[ext_resource type="Script" path="res://scenes/interactable.gd" id="1_gx48w"]
[ext_resource type="Texture2D" uid="uid://bqasq5r1eqe2b" path="res://resources/art/circle.png" id="2_cchs2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_chpaw"]
size = Vector2(129, 141.208)

[node name="Interactable" type="Node2D"]
script = ExtResource("1_gx48w")

[node name="InteractLabel" type="Label" parent="."]
offset_left = -71.0
offset_top = -90.0
offset_right = 71.0
offset_bottom = -66.0
pivot_offset = Vector2(71, 12)
text = "Press E to Interact"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="InteractLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="InteractLabel"]
layout_mode = 0
offset_left = 36.0
offset_top = -1.0
offset_right = 68.0
offset_bottom = 31.0
scale = Vector2(0.8, 0.8)
fill_mode = 4
texture_progress = ExtResource("2_cchs2")
tint_under = Color(0, 0, 0, 1)

[node name="InteractArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_chpaw")

[node name="InteractTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_interact_area_body_exited"]
[connection signal="timeout" from="InteractTimer" to="." method="_on_interact_timer_timeout"]
